tests/ui/privacy/pub-priv-dep/unresolved-public-path.stderr
error: type `Shared` from private dependency 'shared' in public interface
  --> $DIR/unresolved-public-path.rs:13:1
   |
LL | pub fn leaks_private() -> shared::Shared {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unresolved-public-path.rs:9:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error
